fix overflow to show :before widget

--- a/src/bundle/Resources/public/css/themes/default/style.css
+++ b/src/bundle/Resources/public/css/themes/default/style.css
@@ -1,6 +1,5 @@
 /* jsTree default theme */
 #treemenu-sidebar-widget {
-  overflow: auto;
   font-size: 0.9375rem;
   white-space: nowrap;
 }
